# calorie_tracker

./: README.md  pyproject.toml  render.yaml
app/: config.py  logger_config.py  main.py
app/ai/: gemini_quantity.py  gemini_vision.py  prompts.py
app/api/: food.py  history.py
app/db/: session.py
app/db/repositories/: food_log_repo.py
app/models/: food_log.py  user.py
app/schemas/: food.py
app/services/: ai_quantity_service.py  nutrition_service.py
